1.0400 2012-04-11
 - Added a date format option to find. Thanks to jwieland.
 - Added better FQL handling. Thanks to vielmath.
 - Added photo publishing. Thanks to c0decafe.

1.0301 2011-10-18
 - Merged custom user agent. Thanks to typester.

1.0300 2011-04-30
 - Merged 'properties' in Post graph from Fayland Lam.
 - Now require LWP 6 to eliminate SSL problems with CPAN Testers, and just because that's the way everybody should be moving anyway.
 - Now using Ouch instead of Exception::Class.

1.0200 2011-03-15
 - Made Digest::SHA an optional component. Thanks to Mark Carey.
 - Added the ability to publish checkins to Facebook.
 - Documented an easy way to take a relationship URL passed back from Facebook and turn it into a Facebook::Graph::Response object.

1.0100 2011-01-04
 - Added Facebook::Graph::Query::from. Inspired by a pull request from Dan 
  Magnuszewski.

1.0000 2010-12-09
 - Updated recipe2 example to use more modern Dancer features.
 - Merged POD patch from fayland.
 - Can now post posts and events directly to other pages you control without 
  switching access tokens.
 - Added set_source(), set_privacy(), set_actions(), add_actions(),
  set_target_countries(), set_target_cities(), set_target_regions(), and
  set_target_locales to Facebook::Graph::Publish::Post.
 - Changed get_post_params() in Facebook::Graph::Publish to return an array ref
  instead of a hash ref.
 - Now requires Exception::Class.
 
 NOTE: This version is not backward compatible with previous versions because
 the get_post_params() method in Facebook::Graph::Publish now returns an array
 ref rather than a hash ref. However, if you didn't extend this module, then you
 likely aren't calling this method anywhere, so for you the module will remain
 backward compatible. This is the reason for the major version number increase.

 NOTE2: This version is not backward compatible with previous versions because
 we are no longer throwing array based exceptions. Instead the exceptions are