@@ -3,7 +3,7 @@ author  = JT Smith <jt@plainblack.com>
 license = Perl_5
 copyright_holder = Plain Black Corporation
 copyright_year   = 2012
-version = 1.0320
+version = 1.0400
 
 [@Classic]
 
@@ -24,7 +24,6 @@ Mozilla::CA = 20110409
 DateTime = 0.61
 DateTime::Format::Strptime = 1.4000
 MIME::Base64::URLSafe = 0.01
-URI::Encode = 0.02
 Ouch = 0.0400
 
 [MetaNoIndex]
